@@ -6,6 +6,8 @@ freebsd-manpages (9.1-1) UNRELEASED; urgency=low
   * Rework get-orig-source target to support FreeBSD releases which don't
     offer manpages for download separately.
   * Use debian/install and dh_install instead of calling "cp" manually
+  * Use prename instead of double for loop to add freebsd man page suffix
+    + Add build-dependency on perl
 
  -- Axel Beckert <abe@debian.org>  Sat, 31 Aug 2013 00:47:15 +0200
 
